--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 </head>
 <body>
     <header>
-        <div class="header-logo"> <img src="logo.png" alt="Sparta Academy Logo"> </div>
-        <div class="header-titulo"> <h1>SPARTA ACADEMY</h1> <h2>PLATAFORMA DE SIMULADORES</h2> </div>
+        <a href="index.html" class="header-main-link">
+            <div class="header-logo"> <img src="logo.png" alt="Sparta Academy Logo"> </div>
+            <div class="header-titulo"> <h1>SPARTA ACADEMY</h1> <h2>PLATAFORMA DE SIMULADORES</h2> </div>
+        </a>
+        
         <div class="user-info-container desktop-only"> <span id="user-name-display-desktop">Aspirante: Cargando...</span> <div class="dropdown"> <button class="dropdown-btn">▼</button> <div class="dropdown-content"> <a href="#" id="logout-button-desktop">Cerrar Sesión</a> </div> </div> </div>
         <button class="hamburger-menu mobile-only" id="hamburger-btn">☰</button>
     </header>
