--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-        <p>Dir: Calle Bolívar entre Boyacá y Juní</p>
+        <p>Dir: Calle Bolívar entre Boyacá y Junín</p>
         <p>Cell: 0989746618 / 0984541920 / 0987451775</p>
         <p>Email: spartatulcan@gmail.com</p>
     </footer>
@@ -74,3 +74,4 @@
     </script>
 </body>
 </html>
+
