--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <div class="header-titulo"> <h1>SPARTA ACADEMY</h1> <h2>PLATAFORMA DE SIMULADORES</h2> </div>
         </a>
         
+        <div class="header-spacer"></div>
+
         <div class="user-info-container desktop-only"> <span id="user-name-display-desktop">Aspirante: Cargando...</span> <div class="dropdown"> <button class="dropdown-btn">▼</button> <div class="dropdown-content"> <a href="#" id="logout-button-desktop">Cerrar Sesión</a> </div> </div> </div>
         <button class="hamburger-menu mobile-only" id="hamburger-btn">☰</button>
     </header>
@@ -74,4 +76,3 @@
     </script>
 </body>
 </html>
-
