--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
         <div class="modal-box">
             <img src="logo.png" alt="Sparta Academy Logo" class="modal-logo">
             <h2>¡Bienvenido al Módulo de Simuladores!</h2>
-            <p>Aspirante <strong id="modal-nombre-aspirante"></strong></p>
+            <p><span id="modal-rol-aspirante">Aspirante</span> <strong id="modal-nombre-aspirante"></strong></p>
             <button id="continuar-btn" class="modal-btn-confirmar">Continuar</button>
         </div>
     </div>
