--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" href="CSS/style-home.css">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&family=Work+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="JS/auth.js"></script>
     <script> checkAuth(); </script>
@@ -57,13 +58,25 @@
                 </div>
             </div>
             <div class="simulador-section">
-                <h2>Simuladores Pruebas Psicológicas</h2>
+                <h2>Simuladores Psicosométricos</h2>
                 <p>Acceda a los simuladores de inteligencia o personalidad.</p>
                 <div class="materias-grid">
                     <a href="simulador.html?materia=inteligencia" class="materia-card"><h3>INTELIGENCIA</h3></a>
                     <a href="simulador.html?materia=personalidad" class="materia-card"><h3>PERSONALIDAD</h3></a>
                 </div>
             </div>
+
+            <div class="simulador-section">
+                <h2>Pruebas PPNN</h2>
+                <p>Acceda a los cuestionarios de la Policía Nacional.</p>
+                <div class="materias-grid">
+                    <a href="simulador.html?materia=ppnn1" class="materia-card"><h3>CUESTIONARIO 1 PPNN</h3></a>
+                    <a href="simulador.html?materia=ppnn2" class="materia-card"><h3>CUESTIONARIO 2 PPNN</h3></a>
+                    <a href="simulador.html?materia=ppnn3" class="materia-card"><h3>CUESTIONARIO 3 PPNN</h3></a>
+                    <a href="simulador.html?materia=ppnn4" class="materia-card"><h3>CUESTIONARIO 4 PPNN</h3></a>
+                </div>
+            </div>
+
         </div>
     </main>
 
