--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="simulador-section">
-                <h2>Pruebas PPNN</h2>
+                <h2>Pruebas PPNN 2025</h2>
                 <p>Acceda a los cuestionarios de la Policía Nacional.</p>
                 <div class="materias-grid">
                     <a href="simulador.html?materia=ppnn1" class="materia-card"><h3>CUESTIONARIO 1 PPNN</h3></a>
@@ -95,3 +95,4 @@
     </script>
 </body>
 </html>
+
