--- a/resultados.html
+++ b/resultados.html
@@ -1,58 +1,124 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <title>Sparta Academy - Reportes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style-resultados.css">
+    <title>Sparta Academy - Reporte de Resultados</title>
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&family=Work+Sans:wght@400;600&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="CSS/style-resultados.css">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&family=Work+Sans:wght@400;600&display=swap"
+        rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="JS/auth.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
-    
-    <script src="JS/auth.js"></script>
-    <script> checkAuth(); </script>
 
-    <style>
-        .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 9999; display: none; justify-content: center; align-items: center; }
-        .modal-content { background: white; padding: 40px; border-radius: 12px; width: 90%; max-width: 450px; text-align: center; border-top: 6px solid #d32f2f; }
-        .modal-icon { font-size: 3.5rem; color: #d32f2f; display: block; margin-bottom: 15px; }
-        .btn-close-modal { background: #333; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; margin-top: 15px; }
-    </style>
+    <script>
+        checkAuth();
+        const userInfo = getUserInfo();
+        if (userInfo && userInfo.rol !== 'admin') {
+            alert("Acceso denegado. Esta página es solo para administradores.");
+            window.location.replace('index.html');
+        }
+    </script>
 </head>
+
 <body>
     <header>
         <a href="index.html" class="header-main-link">
-            <div class="header-logo"><img src="logo.png" alt="Logo"></div>
-            <h1>ADMINISTRACIÓN</h1>
+            <div class="header-logo"> <img src="logo.png" alt="Sparta Academy Logo"> </div>
+            <div class="header-titulo">
+                <h1>SPARTA ACADEMY</h1>
+                <h2>REPORTE DE RESULTADOS</h2>
+            </div>
         </a>
-        <div class="user-menu"><button onclick="logout()">Salir</button></div>
+        <div class="header-spacer"></div>
+        <div class="user-info-container desktop-only">
+            <span id="user-name-display-desktop">Cargando...</span>
+            <div class="dropdown">
+                <button class="dropdown-btn">▼</button>
+                <div class="dropdown-content">
+                    <a href="index.html">Simuladores</a>
+                    <a href="#" id="logout-button-desktop">Cerrar Sesión</a>
+                </div>
+            </div>
+        </div>
+        <button class="hamburger-menu mobile-only" id="hamburger-btn">☰</button>
     </header>
 
-    <main class="resultados-main">
-        <h1>Reporte de Intentos</h1>
-        <div class="filtros-container">
-            <select id="filtro-ciudad"><option>Todas</option><option>Tulcán</option><option>Ibarra</option></select>
-            <select id="filtro-materia"><option>Todas</option></select>
-            <input id="filtro-nombre" placeholder="Buscar nombre...">
-            <button id="descargar-general-csv-btn">CSV</button>
-            <button id="descargar-pdf-btn">PDF</button>
+    <div class="side-nav" id="side-nav">
+        <button class="close-nav-btn" id="close-nav-btn">&times;</button>
+        <div class="side-nav-header"> <img src="logo.png" alt="Sparta Logo" class="side-nav-logo">
+            <h3>Menú Admin</h3>
         </div>
-        <div id="loading-spinner">Cargando...</div>
-        <div id="reporte-container"></div>
+        <div class="side-nav-user">
+            <p id="user-prefix-mobile">Usuario:</p>
+            <p><strong id="user-name-display-mobile">Cargando...</strong></p>
+        </div>
+        <a href="index.html" class="side-nav-link">Simuladores</a>
+        <a href="#" id="logout-button-mobile" class="side-nav-link">Cerrar Sesión</a>
+    </div>
+    <div class="overlay" id="overlay"></div>
+
+    <main class="resultados-main">
+        <h1>Reporte de Intentos de Aspirantes</h1>
+
+        <div class="filtros-container">
+            <div class="filtro-grupo">
+                <i class="fas fa-map-marker-alt"></i>
+                <label for="filtro-ciudad">Ciudad:</label>
+                <select id="filtro-ciudad">
+                    <option value="Tulcán">Tulcán</option>
+                    <option value="Ibarra">Ibarra</option>
+                    <option value="Todos">Todas las Ciudades</option>
+                </select>
+            </div>
+            <div class="filtro-grupo">
+                <i class="fas fa-book"></i>
+                <label for="filtro-materia">Materia:</label>
+                <select id="filtro-materia">
+                    <option value="Todas">Todas las Materias</option>
+                </select>
+            </div>
+            <div class="filtro-grupo filtro-nombre">
+                <i class="fas fa-search"></i>
+                <label for="filtro-nombre">Buscar Nombre:</label>
+                <input type="text" id="filtro-nombre" placeholder="Escriba un nombre...">
+            </div>
+
+            <button id="descargar-pdf-btn" class="pdf-button">
+                <i class="fas fa-file-pdf"></i> PDF General
+            </button>
+            <button id="descargar-general-csv-btn" class="csv-button">
+                <i class="fas fa-file-excel"></i> CSV General
+            </button>
+        </div>
+
+        <div id="loading-spinner" class="spinner"></div>
+        <div id="reporte-container">
+            <p class="no-intentos">Cargando datos de aspirantes...</p>
+        </div>
+
     </main>
 
-    <div id="error-modal" class="modal-overlay">
-        <div class="modal-content">
-            <i class="fas fa-exclamation-circle modal-icon"></i>
-            <h3>Error de Datos</h3>
-            <p id="error-text"></p>
-            <button class="btn-close-modal" onclick="document.getElementById('error-modal').style.display='none'">Cerrar</button>
-        </div>
-    </div>
+    <footer>
+        <p>Dir: Calle Bolívar entre Boyacá y Junín</p>
+        <p>Cell: 0989746618 / 0984541920 / 0987451775</p>
+        <p>Email: spartatulcan@gmail.com</p>
+    </footer>
 
-    <script src="JS/script-resultados.js"></script>
+    <script src="JS/script-resultados.js" type="module"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            setupUserInfoDropdown();
+            setupMobileMenu();
+        });
+        window.addEventListener('pageshow', function (event) { if (event.persisted) { checkAuth(); } });
+    </script>
 </body>
+
 </html>
