--- a/resultados.html
+++ b/resultados.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sparta Academy - Reporte de Resultados</title>
+    <title>Sparta Academy - Reportes</title>
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="CSS/style-resultados.css">
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&family=Work+Sans:wght@400;600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&family=Work+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="JS/auth.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
-
+    
+    <script src="JS/auth.js"></script>
     <script>
         checkAuth();
-        const userInfo = getUserInfo();
-        if (userInfo && userInfo.rol !== 'admin') {
-            alert("Acceso denegado. Esta página es solo para administradores.");
+        const info = getUserInfo();
+        if (info && info.rol !== 'admin') {
+            alert("Acceso denegado.");
             window.location.replace('index.html');
         }
     </script>
 </head>
-
 <body>
     <header>
         <a href="index.html" class="header-main-link">
-            <div class="header-logo"> <img src="logo.png" alt="Sparta Academy Logo"> </div>
-            <div class="header-titulo">
-                <h1>SPARTA ACADEMY</h1>
-                <h2>REPORTE DE RESULTADOS</h2>
-            </div>
+            <div class="header-logo"> <img src="logo.png" alt="Logo"> </div>
+            <div class="header-titulo"><h1>SPARTA ACADEMY</h1><h2>REPORTE ADMIN</h2></div>
         </a>
         <div class="header-spacer"></div>
         <div class="user-info-container desktop-only">
-            <span id="user-name-display-desktop">Cargando...</span>
             <div class="dropdown">
                 <button class="dropdown-btn">▼</button>
                 <div class="dropdown-content">
@@ -51,74 +43,49 @@
     </header>
 
     <div class="side-nav" id="side-nav">
-        <button class="close-nav-btn" id="close-nav-btn">&times;</button>
-        <div class="side-nav-header"> <img src="logo.png" alt="Sparta Logo" class="side-nav-logo">
-            <h3>Menú Admin</h3>
-        </div>
-        <div class="side-nav-user">
-            <p id="user-prefix-mobile">Usuario:</p>
-            <p><strong id="user-name-display-mobile">Cargando...</strong></p>
-        </div>
+        <button class="close-nav-btn">&times;</button>
+        <div class="side-nav-header"><img src="logo.png" style="width:60px"><h3>Admin</h3></div>
         <a href="index.html" class="side-nav-link">Simuladores</a>
         <a href="#" id="logout-button-mobile" class="side-nav-link">Cerrar Sesión</a>
     </div>
     <div class="overlay" id="overlay"></div>
 
     <main class="resultados-main">
-        <h1>Reporte de Intentos de Aspirantes</h1>
-
+        <h1>Reporte de Intentos</h1>
         <div class="filtros-container">
             <div class="filtro-grupo">
                 <i class="fas fa-map-marker-alt"></i>
-                <label for="filtro-ciudad">Ciudad:</label>
-                <select id="filtro-ciudad">
-                    <option value="Tulcán">Tulcán</option>
-                    <option value="Ibarra">Ibarra</option>
-                    <option value="Todos">Todas las Ciudades</option>
-                </select>
+                <select id="filtro-ciudad"><option>Todas</option><option>Tulcán</option><option>Ibarra</option></select>
             </div>
             <div class="filtro-grupo">
                 <i class="fas fa-book"></i>
-                <label for="filtro-materia">Materia:</label>
-                <select id="filtro-materia">
-                    <option value="Todas">Todas las Materias</option>
-                </select>
+                <select id="filtro-materia"><option>Todas las Materias</option></select>
             </div>
             <div class="filtro-grupo filtro-nombre">
                 <i class="fas fa-search"></i>
-                <label for="filtro-nombre">Buscar Nombre:</label>
-                <input type="text" id="filtro-nombre" placeholder="Escriba un nombre...">
+                <input type="text" id="filtro-nombre" placeholder="Buscar nombre...">
             </div>
-
-            <button id="descargar-pdf-btn" class="pdf-button">
-                <i class="fas fa-file-pdf"></i> PDF General
-            </button>
-            <button id="descargar-general-csv-btn" class="csv-button">
-                <i class="fas fa-file-excel"></i> CSV General
-            </button>
+            <button id="descargar-pdf-btn" class="pdf-button">PDF</button>
+            <button id="descargar-general-csv-btn" class="csv-button">CSV</button>
         </div>
 
         <div id="loading-spinner" class="spinner"></div>
-        <div id="reporte-container">
-            <p class="no-intentos">Cargando datos de aspirantes...</p>
-        </div>
-
+        <div id="reporte-container"></div>
     </main>
 
-    <footer>
-        <p>Dir: Calle Bolívar entre Boyacá y Junín</p>
-        <p>Cell: 0989746618 / 0984541920 / 0987451775</p>
-        <p>Email: spartatulcan@gmail.com</p>
-    </footer>
+    <div id="modal-error" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:9999; justify-content:center; align-items:center;">
+        <div style="background:white; padding:30px; border-radius:10px; max-width:400px; text-align:center; border-top:5px solid #d32f2f;">
+            <h3 style="color:#d32f2f;">Error de Conexión</h3>
+            <p id="error-text">No se pudo cargar la base de datos.</p>
+            <button onclick="document.getElementById('modal-error').style.display='none'" style="background:#333; color:white; border:none; padding:10px 20px; margin-top:15px; cursor:pointer;">Cerrar</button>
+        </div>
+    </div>
 
-    <script src="JS/script-resultados.js" type="module"></script>
-    <script>
+    <script src="JS/script-resultados.js"></script> <script>
         document.addEventListener('DOMContentLoaded', () => {
-            setupUserInfoDropdown();
-            setupMobileMenu();
+            if(typeof setupUserInfoDropdown === 'function') setupUserInfoDropdown();
+            if(typeof setupMobileMenu === 'function') setupMobileMenu();
         });
-        window.addEventListener('pageshow', function (event) { if (event.persisted) { checkAuth(); } });
     </script>
 </body>
-
 </html>
