--- a/index.html
+++ b/index.html
@@ -76,18 +76,12 @@
 
     <script src="JS/script-home.js"></script>
     <script>
+        // Lógica del Menú Móvil
         document.addEventListener('DOMContentLoaded', () => {
             const btn = document.getElementById('hamburger-btn');
             const nav = document.getElementById('side-nav');
             const close = document.getElementById('close-nav-btn');
             const overlay = document.getElementById('overlay');
-            const userDisplay = document.getElementById('user-display');
-
-            const userStr = sessionStorage.getItem('userInfo');
-            if(userStr) {
-                const u = JSON.parse(userStr);
-                // userDisplay.textContent = u.nombre.split(' ')[0].toUpperCase(); 
-            }
 
             if(btn) btn.onclick = () => { nav.classList.add('open'); overlay.style.display = "block"; };
             const closeMenu = () => { nav.classList.remove('open'); overlay.style.display = "none"; };
