--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                 </div>
             </div>
 
-            <div id="dynamic-grid" class="materias-grid">
-                </div>
+            <div id="dynamic-grid" class="materias-grid"></div>
         </div>
     </main>
 
@@ -76,7 +75,7 @@
 
     <script src="JS/script-home.js"></script>
     <script>
-        // Lógica del Menú Móvil
+        // Init Menú Móvil
         document.addEventListener('DOMContentLoaded', () => {
             const btn = document.getElementById('hamburger-btn');
             const nav = document.getElementById('side-nav');
